--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -134,13 +134,14 @@ tags:
 Ч.2: Pointcrawl в подземельях Сигила(перевод)
 
 ## Цикл Тайная жизнь узлов
-1
 
-2
+1 [Тайная жизнь узлов](https://cyborgsandmages.com/posts/translations/alexandrian-secret-life-of-nodes-1)
 
-3
+2 [Тайная жизнь узлов – Часть 2: Кампания, основанная на узлах](https://cyborgsandmages.com/posts/translations/alexandrian-secret-life-of-nodes-2)
 
-4
+3 [Тайная жизнь узлов – Часть 3: Фрактальные узлы](https://cyborgsandmages.com/posts/translations/alexandrian-secret-life-of-nodes-3)
+
+4 [Тайная жизнь узлов – Часть 4: Узлы – это еще не все](https://cyborgsandmages.com/posts/translations/alexandrian-secret-life-of-nodes-4)
 
 [Тайная жизнь узлов – Часть 5: Естественность дизайна на основе узлов](https://cyborgsandmages.com/posts/translations/alexandrian-secret-life-of-nodes-5)
 
@@ -180,7 +181,41 @@ tags:
 
 Случайный совет для Мастера: Так что же мы там делаем?
 
-7
+Случайный совет для ДМа – Вождение порталов
+
+Случайный совет для ДМа: Проверка на решение загадок
+
+Случайный совет для Мастера – Гексы-матрёшки
+
+Случайный совет для Мастера – как проехать тупик
+
+Случайный совет для Мастера — Когда зовут Большие Пушки
+
+Случайный совет для Мастера — Когда зовут Маленьких Парней
+
+Случайный совет для Мастера – пригоршни дайсов
+
+Случайный совет для Мастера – создание улик
+
+Случайный совет для Мастера – создание улик (Часть 2)
+
+Случайный совет для Мастера: Великолепные комнаты подземелий
+
+Случайный совет для Мастера: Визуализация боя
+
+Случайный совет для Мастера: Вождение хоррора
+
+Случайный совет для Мастера: Гибкость проверок навыков
+
+Случайный совет для Мастера: Добивание
+
+Случайный совет для Мастера: Долгоиграющие сюжетные завязки
+
+Случайный совет для Мастера: Плохие парни на сайферах
+
+Случайный совет для Мастера: Пока вы мертвы
+
+Случайный совет для Мастера: Разделение партии
 
 8
 
@@ -225,7 +260,9 @@ tags:
 
 ## Цикл Спроси Александриана
 
-Спроси Александриана № 6
+[Спроси Александриана #6: Открытие на другой раз](https://cyborgsandmages.com/posts/translations/alexandrian-ask6)
+
+[Спроси Александриана №9: Продвинутые рулинги для 5е](https://cyborgsandmages.com/posts/translations/alexandrian-ask9)
 
 [Спроси Александриана № 10 - Как попрощаться с игроком](https://cyborgsandmages.com/posts/translations/alexandrian-ask10)
 
@@ -233,6 +270,16 @@ tags:
 ## Случайное миростроение
 
 [Случайное миростроение – Создание дворянских титулов](https://cyborgsandmages.com/posts/translations/alexandrian-random-worldbuilding-creating-noble-titles)
+
+Случайное миростроение – Культурные полутона
+
+Случайное миростроение – лакомые кусочки истории
+
+Случайное миростроение – Поддержание веры
+
+Случайное миростроение – Фантастические нации
+
+Случайное миростроение: Быстрое и яростное создание своего мира
 
 ## Грамотная подготовка
 
@@ -268,6 +315,7 @@ tags:
 [Как работают «рельсы»](https://cyborgsandmages.com/posts/translations/alexandrian-how-work-railroading)
 
 [Зачахшее исследование? – Невидимый столп пятой редакции](https://cyborgsandmages.com/posts/translations/alexandrian-exploration-invisible-pillar-of-5e)
+
 [Впечатления от OD&D: Боги и жрецы](https://cyborgsandmages.com/posts/translations/reactions-to-odd-gods-clerics-alexandrian-translate)
 
 [Нуменера: Фрактальные персонажи Мастера](https://cyborgsandmages.com/posts/translations/alexandrian-numenera-fractal-characters)
@@ -277,6 +325,14 @@ tags:
 [Размышления о путешествиях по диким землям](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel)
 
 [Размышления о путешествиях по диким землям - Часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-thinking-wilderness-travel-2)
+
+Как же плох Guidance в пятой редакции
+
+Модуль статуса кампании: Корреспонденция
+
+Модуль статуса кампании: Обновление списков
+
+Модуль статуса кампании: Статус подземелья
 
 ## Рулинги на практике
 
@@ -290,6 +346,7 @@ tags:
 
 [Рулинги на практике: Ловушки, часть 2](https://cyborgsandmages.com/posts/translations/alexandrian-rulings-practice-traps-2)
 
+Рулинги на практике: Проверки рассудка
 
 ## Непроверенная пятая редакция
 
@@ -299,6 +356,58 @@ tags:
 
 [Непроверенная пятая редакция: Ситуационное преимущество](https://cyborgsandmages.com/posts/translations/alexandrian-5e-situational-advantage)
 
+Cypher v. Fate
+
+Дополнение к исследованию гексов: Специализированные таблицы столкновений
+
+Дополнение к исследованию по точкам: Исследование глубин
+Забытые Королевства – Торговый Тракт
+
+Заметки дизайнера: Сохранение Импульса в 2d20
+
+Игровая структура: Исследование секторов
+
+Игровые группы vs. Те, кто просто собрался поиграть
+
+Инструмент для исследования гексов: Таблица слухов
+
+Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
+
+Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
+
+Исследование глубин – Часть 2: Продвинутые опции
+
+Исследование по точкам интереса – Часть 2.Процедуры продвинутого характера
+
+Исследование точек интереса
+
+Мысль дня: Драконы = Подземелья
+
+Мысль дня: Эволюция нулевой сессии
+
+Нагрузка в камнях для 5E
+
+Нагрузка в камнях для 5E – Часть 2: Лист
+
+Не готовьте сюжетную линию «Вы пожалеете об этом дне, герои!» (Принципы злодейства в НРИ)
+
+Непроверенная пятая редакция: Рационализированные навыки
+
+Остров сокровищ: Карта – это приключение
+
+Отдых в подземелье
+
+Отдых в подземелье – Часть 2: Трюки с веревками и миниатюрные хижины
+
+Продвинутые практики
+
+Синдром пострадавшего игрока
+
+Естественность дизайна на основе узлов
+
+Что с подземельем? Упадок D&D приключений
+
+Список «Нет» для ДМа #13: Опасности текста в табличке
 ---
 
 ## Загрузки
@@ -306,6 +415,7 @@ tags:
 [Драконий Куш - Ремикс Александриана](https://cyborgsandmages.com/files/downloads/remix_drakonyego_kusha_v_0_97.pdf)
 
 [Правила гекскраула для пятой редакции от Александриана](https://cyborgsandmages.com/files/downloads/hexcrawl-rules-5e-alexandrian.pdf)
+
 
 ---
 
