--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -148,11 +148,11 @@ tags:
 
 ## Цикл Hexcrawl 5e
 
-1
+1 Исследование гексов в пятой редакции D&D
 
 2
 
-3
+3 Исследование гексов в пятой редакции D&D - часть 3 - Действия во время смены
 
 4
 
@@ -169,35 +169,35 @@ tags:
 10
 
 
-## Цикл Случайный совет Мастеру
+## Цикл Случайный совет для Мастера
 
-Случайный совет для Мастера – Гексы-матрёшки
+Случайный совет для Мастера: Гексы-матрёшки
 
-Случайный совет для Мастера – Создание улик
+Случайный совет для Мастера: Создание улик
 
-Случайный совет для Мастера – создание улик (Часть 2)
+Случайный совет для Мастера: создание улик (Часть 2)
 
 Случайный совет для Мастера: Зачем вообще нужны столкновения в дикой местности?
 
 Случайный совет для Мастера: Так что же мы там делаем?
 
-Случайный совет для ДМа – Вождение порталов
+Случайный совет для Мастера: Вождение порталов
 
-Случайный совет для ДМа: Проверка на решение загадок
+Случайный совет для Мастера: Проверка на решение загадок
 
-Случайный совет для Мастера – Гексы-матрёшки
+Случайный совет для Мастера: Гексы-матрёшки
 
-Случайный совет для Мастера – как проехать тупик
+Случайный совет для Мастера:  как проехать тупик
 
-Случайный совет для Мастера — Когда зовут Большие Пушки
+Случайный совет для Мастера: Когда зовут Большие Пушки
 
-Случайный совет для Мастера — Когда зовут Маленьких Парней
+Случайный совет для Мастера: Когда зовут Маленьких Парней
 
-Случайный совет для Мастера – пригоршни дайсов
+Случайный совет для Мастера: пригоршни дайсов
 
-Случайный совет для Мастера – создание улик
+Случайный совет для Мастера: создание улик
 
-Случайный совет для Мастера – создание улик (Часть 2)
+Случайный совет для Мастера: создание улик (Часть 2)
 
 Случайный совет для Мастера: Великолепные комнаты подземелий
 
@@ -293,9 +293,64 @@ tags:
 
 ## Список «Нет» для ДМа
 
+[Список «Нет» для ДМа #13: Опасности текста в табличке](https://cyborgsandmages.com/posts/translations/alexandrian-dont-13)
+
 [Список «Нет» для ДМа № 15: Заблуждение водящего по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-dont-15)
 
 ## Прочее
+
+Cypher v. Fate
+
+Дополнение к исследованию гексов: Специализированные таблицы столкновений
+
+Дополнение к исследованию по точкам: Исследование глубин
+Забытые Королевства – Торговый Тракт
+
+Заметки дизайнера: Сохранение Импульса в 2d20
+
+Игровая структура: Исследование секторов
+
+Игровые группы vs. Те, кто просто собрался поиграть
+
+Инструмент для исследования гексов: Таблица слухов
+
+Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
+
+Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
+
+Исследование глубин – Часть 2: Продвинутые опции
+
+Исследование по точкам интереса – Часть 2.Процедуры продвинутого характера
+
+Исследование точек интереса
+
+Мысль дня: Драконы = Подземелья
+
+Мысль дня: Эволюция нулевой сессии
+
+Нагрузка в камнях для 5E
+
+Нагрузка в камнях для 5E – Часть 2: Лист
+
+Не готовьте сюжетную линию «Вы пожалеете об этом дне, герои!» (Принципы злодейства в НРИ)
+
+Непроверенная пятая редакция: Рационализированные навыки
+
+Остров сокровищ: Карта – это приключение
+
+Отдых в подземелье
+
+Отдых в подземелье – Часть 2: Трюки с веревками и миниатюрные хижины
+
+Продвинутые практики
+
+Синдром пострадавшего игрока
+
+Естественность дизайна на основе узлов
+
+Что с подземельем? Упадок D&D приключений
+
+
 
 [Как готовить модуль, часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-1)
 
@@ -356,58 +411,7 @@ tags:
 
 [Непроверенная пятая редакция: Ситуационное преимущество](https://cyborgsandmages.com/posts/translations/alexandrian-5e-situational-advantage)
 
-Cypher v. Fate
 
-Дополнение к исследованию гексов: Специализированные таблицы столкновений
-
-Дополнение к исследованию по точкам: Исследование глубин
-Забытые Королевства – Торговый Тракт
-
-Заметки дизайнера: Сохранение Импульса в 2d20
-
-Игровая структура: Исследование секторов
-
-Игровые группы vs. Те, кто просто собрался поиграть
-
-Инструмент для исследования гексов: Таблица слухов
-
-Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
-
-Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
-
-Исследование глубин – Часть 2: Продвинутые опции
-
-Исследование по точкам интереса – Часть 2.Процедуры продвинутого характера
-
-Исследование точек интереса
-
-Мысль дня: Драконы = Подземелья
-
-Мысль дня: Эволюция нулевой сессии
-
-Нагрузка в камнях для 5E
-
-Нагрузка в камнях для 5E – Часть 2: Лист
-
-Не готовьте сюжетную линию «Вы пожалеете об этом дне, герои!» (Принципы злодейства в НРИ)
-
-Непроверенная пятая редакция: Рационализированные навыки
-
-Остров сокровищ: Карта – это приключение
-
-Отдых в подземелье
-
-Отдых в подземелье – Часть 2: Трюки с веревками и миниатюрные хижины
-
-Продвинутые практики
-
-Синдром пострадавшего игрока
-
-Естественность дизайна на основе узлов
-
-Что с подземельем? Упадок D&D приключений
-
-Список «Нет» для ДМа #13: Опасности текста в табличке
 ---
 
 ## Загрузки
