--- a/src/content/posts/translations/alexandrian-hexcrawl-2.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-2.mdx
@@ -14,59 +14,97 @@ translator: pnprpg.ru
 cover: ~assets/covers/the_alexandrian_splashes.png
 ---
 
-ТИПИЧНЫЙ ГЕКС
- Типичный гекс имеет размер 12 миль (от центра одного гекса, до центра другого), протяжённость грани такого гекса равна 7 милям, а суммарная площадь составляет 124 квадратные мили.
-ВАХТА
+## ТИПИЧНЫЙ ГЕКС
+
+Типичный гекс имеет размер 12 миль (от центра одного гекса, до центра другого), протяжённость грани такого гекса равна 7 милям, а суммарная площадь составляет 124 квадратные мили.
+
+## ВАХТА
+
 Вахта это базовая единица учёта времени путешествия, примерно равная четырём часам.
+
 Определение момента в пределах вахты
+
 Если Вам понадобится выбрать какой-то произвольный момент в пределах одной вахты сделайте бросок d8, чтобы определить конкретный получасовой интервал, и 1d30, 01:30 для определения минуты (если такая точность вам необходима).
+
 ДИСТАЦИЯ И СКОРОСТЬ
 | Скорость                | 10 фт. | 15 фт.   | 20 фт.  | 30 фт.  | 40 фт.  |
 |-------------------------|--------|----------|---------|---------|---------|
 | 1 час ходьбы            | 1 миля | 1.5 миль | 2 мили  | 3 миль  | 4 миль  |
 | 1 час спешки            | 2 мили | 3 мили   | 4 мили  | 6 миль  | 8 миль  |
 | 1 вахта (4 часа) ходьбы | 4 мили | 6 миль   | 8 миль  | 12 миль | 16 миль |
-| 1 день (8 часов)        | 8 миль | 12 миль  | 16 миль | 24 мили | 32 мили |милиСверяйтесь с этой таблицей для определения пройденной дистанции за час, за вахту и за день.
-Спешка
+| 1 день (8 часов)        | 8 миль | 12 миль  | 16 миль | 24 мили | 32 мили |
+
+Сверяйтесь с этой таблицей для определения пройденной дистанции за час, за вахту и за день.
+
+## Спешка
+
 Герои на марше могут без последствий ускорить темп движения (спешить) в течение одного часа. Спешка в течение следующего часа, без длительного перерыва на сон (ночёвки), причинит героям один пункт несмертельного урона. В дальнейшем, каждый дополнительный час спешки причинит урон, равный двойному количеству урона от спешки за предыдущий час. Герой получающий несмертельный урон из-за спешки постепенно становится истощённым. Устранение последствий несмертельного урона также устраняет состояние истощения.
-Верховые животные
+
+## Верховые животные
+
 Верховые животные несущие седоков при спешке получают смертельный урон вместо несмертельного.
-Марш-бросок
+
+## Марш-бросок
+
 Обычно герои могут продолжать движение на скорости пешехода в течение 8 часов между ночёвками.
 Продолжительный марш-бросок
 За каждый час движения сверх базовых восьми, персонаж вынужден совершать проверку характеристики Телосложения (сложность 10 + 3 за каждый дополнительный час движения). Если проверка провалена, персонаж получает 1d6 пунктов несмертельного урона. Персонаж получивший несмертельный урон из-за продолжительного марш-броска постепенно становится истощённым. Устранение последствий несмертельного урона также устраняет состояние истощения.
 Верховые животные
 Верховые животные несущие седоков при продолжительном марш-броске получают смертельный урон вместо несмертельного.
-РЕЖИМЫ ДВИЖЕНИЯ
 
-Обычный
+## РЕЖИМЫ ДВИЖЕНИЯ
+
+**Обычный**
+
 Без модификаторов и особенностей.
-Спешка
+
+**Спешка**
+
 Персонажи преодолевают большее расстояние за каждую вахту, в течение которой они спешили (см. таблицу выше).
+
 Сложность проверки ориентирования на местности увеличивается на 4.
+
 Совет: За каждый час спешки в течение одной вахты вы можете просто добавить к пройденному героями расстоянию их “количество миль в час”.
-Настороже
+
+**Настороже**
+
 Двигаясь настороже герои, как вы уже поняли, предельно осторожны.
 Скорость их движения составляет 3/4 от нормальной скорости, а шанс на любую случайную встречу (но не на обнаружение объекта на карте) уменьшается вполовину.
 То-есть, если в результате броска им всё-таки полагается случайная встреча с кем-либо, в 50% случаев, встречи всё-таки не происходит.
 Сложность проверки ориентирования на местности уменьшается на 4.
-Прочёсывание
+
+**Прочёсывание**
+
 Во время прочёсывания местности, герои исследуют все боковые тропинки, тщательно изучают всё попадающееся на пути, и т.п.
 Скорость их движения уменьшается до 1/4, а шанс на любую случайную встречу удваивается.
+
 Примечание: Вполне возможно заниматься прочёсыванием и быть настороже одновременно. В таком случае примените все правила для обоих режимов (включая все модификаторы бросков и проверок).
-Собирательство
+
+**Собирательство**
+
 В режиме собирательства (попутной добычи ресурсов, питья и пищи) группа героев движется c половиной нормальной скорости, однако при этом каждый герой может сделать проверку навыка Выживания один раз в день. При успешной проверке, герой получает достаточное количество еды и воды на один день. В случае, если результат броска Выживания больше сложности проверки (числа, определяемого типом местности), герой также получает по дополнительной порции провианта за каждые 2 пункта, на которые результат его броска превышает сложность.
-ТИП МЕСТНОСТИ
- Тип местности непосредственно влияет на скорость движения героев.
-Проезжий тракт
+
+## ТИП МЕСТНОСТИ
+
+Тип местности непосредственно влияет на скорость движения героев.
+
+**Проезжий тракт**
+
 Проезжий тракт это прямая, широкая, оживлённая и хорошо обслуживаемая дорога.
-Просёлочная дорога
+
+**Просёлочная дорога**
+
 Просёлочная дорога это полоса грязи по которой ездят местные жители на телегах.
-Тропа
+
+**Тропа**
+
 Тропа похожа на дорогу, но двигаться по ней можно только колонной (друг за другом). Движение по тропе требует проверки навыка Ориентирования со сложностью 12. В случае провала, герои незаметно для себя сходят с тропы.
-Бездорожье
+
+**Бездорожье**
+
 Бездорожье это дикая местность без каких-либо заметных путей. Сложность проверки ориентирования увеличивается на +2.
-ЛАНДШАФТ
+
+## ЛАНДШАФТ
 
 | Ландшафт         | Тракт | Дорога/тропа | Бездорожье | ур. сл. Ориентирования | ур. сл. Собирательства |
 |------------------|-------|--------------|------------|------------------------|------------------------|
@@ -81,7 +119,9 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 | Степи            | x1    | x1           | x3/4       | 12                     | 12                     |
 | Болота           | x1    | x3/4         | x1/2       | 15                     | 16                     |
 | Тундра (заснеж.) | x1    | x3/4         | x3/4       | 12                     | 18                     |
+
 ДОП. ОБСТОЯТЕЛЬСТВА
+
 | Обстоятельство                 | Коэфф.  |
 |--------------------------------|---------|
 | Жарк. или холодн. климат       | x3/4    |
@@ -96,17 +136,29 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 | Ураган                         | x1/10   |
 
 Примечание: Ничем (например, стволами деревьев, кустарником, туманом, и т.п.) не затруднённая видимость уменьшает сложность проверки Ориентирования на -4 и усложняет проверки собирательства на +2.
-ДОП. ПРАВИЛО: “РЕАЛИСТИЧНАЯ” ОЦЕНКА ПРОЙДЕННОГО ПУТИ
+
+### ДОП. ПРАВИЛО: “РЕАЛИСТИЧНАЯ” ОЦЕНКА ПРОЙДЕННОГО ПУТИ
 Дистанция которую вы видите в таблице “Дистанция и скорость” является всего-лишь усреднённым значением. Реальное же пройденное расстояние в игре может колебться в диапазоне от 50% до 150% (2d6+3 x 10%) от этого среднего значения. Путешествующие герои могут примерно оценить реально пройденный путь при помощи успешной проверки навыка Выживания, против сложности ориентирования в окружающем их типе местности. В случае провала проверки они склонны считать что преодолели именно то расстояние, которое присутствует в таблице.
+
 Примечание: Это правило предназначено для того, чтобы усложнить для игроков точное картографирование местности. Вы также можете адаптировать это правило для процесса исследования подземелий, хотя в таком случае картографирование и может начать отнимать у игроков слишком много времени). Помимо прочего, вы можете позволять игрокам “взять 10” (получить уверенный результат за намерено неспешное исследование вопроса), в качестве отражения того, что опытные путешественники привыкли точно оценивать пройденную дистанцию.
-РАССТОЯНИЯ ВНУТРИ ГЕКСА
- Процесс путешествия через гексы по определению условен, но для того чтобы точно определить дистанцию перемещений героев по карте, вам понадобится механика учёта их продвижения внутри гексов.
-Изнутри
+
+## РАССТОЯНИЯ ВНУТРИ ГЕКСА
+
+Процесс путешествия через гексы по определению условен, но для того чтобы точно определить дистанцию перемещений героев по карте, вам понадобится механика учёта их продвижения внутри гексов.
+
+**Изнутри**
+
 Будем считать, что если герои начинаю свой путь откуда-то изнутри гекса, им потребуется преодолеть всего шесть миль для достижения любой из границ этого гекса.
+
 Опциональное правило: При желании, вы можете скорректировать это значение. Например, если река протекает около восточного угла гекса, и герои начали своё движение именно от реки, вы можете принять, что им необходимо преодолеть только две мили для выхода из гекса через его восточную границу или 10 миль для выхода через западную.
-Насквозь
+
+**Насквозь**
+
 Героям потребуется преодолеть 12 миль для того чтобы пройти гекс насквозь, от края до края, и покинуть его через любую из трёх его противоположных точке входа сторон.
+
 Выход через ближайшую сторону
 Для выхода из гекса через ближайшую сторону героям потребуется преодолеть ровно шесть миль.
-Обратный путь
+
+**Обратный путь**
+
 Когда герои решают пойти назад по своим же следам, просто верните их к точке входа в гекс. Если же они покинут гекс через сторону сквозь которую вошли, но по другим причинам (например, потому что заблудились), просто отметьте, что они прошли ещё шесть миль (или иное количество, по обстоятельствам). 
