--- a/src/content/posts/articles/about-hexcrawl.mdx
+++ b/src/content/posts/articles/about-hexcrawl.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Гексы на картах или введение в гекскраул"
+description: "Краткое обьяснение основных положений гексагональных карт. Введение в гекскраул"
 date: "2023-09-18"
 tags: 
   - "гекскраул"
