--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -8,18 +8,63 @@ tags:
 author: Angry GM
 ---
 
-[Представление вашего персонажа](https://cyborgsandmages.com/posts/translations/angrygm-presentation-of-your-pc)
+## Разное
 
 [Таро для мастеров- чайников](https://cyborgsandmages.com/posts/translations/angrygm-taro-for-dummies)
 
+[Как играть в открытом мире Angry GM](https://cyborgsandmages.com/posts/translations/translate-how-to-play-open-world-angry-gm)
+
+[Мастерское Кредо](https://cyborgsandmages.com/posts/translations/angrygm-gm-credo)
+
+
+ТЕМП в НРИ (Pacing) от Злюки ГМа
+
+Сила редактуры
+
+Прыжок за ширму: как провести свою первую игру
+
+Выносите решения как мастер
+
+Потерянные навыки игрока: Коллер
+
+Что делает исследование исследованием?
+
+Выиграть ролевую игру
+
+Основная механика Злого ГМ-а
+
+## Советы игрокам
+
+[Представление вашего персонажа](https://cyborgsandmages.com/posts/translations/angrygm-presentation-of-your-pc)
+
+Памятка для игроков #2: Изображение персонажей на игре
+
+## Деятельность простоя
+
+Создание предметов вне стола
+
+Между заданиями
+
 [Система деятельности во время простоя Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-downtime-activities)
+
+## Столкновения
+
+Как строить клевые энкаунтеры!
 
 [Четыре вещи о которых вы не слышали, которые делают энкаунтеры не отстойными](https://cyborgsandmages.com/posts/translations/angrygm-four-things-make-encounters-not-suck)
 
 [Всегда говори мне о шансах: переосмысление случайных встреч (часть 1)](https://cyborgsandmages.com/posts/translations/always-tell-me-about-chances)
 
-[Как играть в открытом мире Angry GM](https://cyborgsandmages.com/posts/translations/translate-how-to-play-open-world-angry-gm)
 
+## Нарративная структура для чайников
+
+Нарративная структура для чайников: Часть 1.
+
+Нарративная структура для чайников: Часть 2.
+
+Нарративная структура для чайников. Часть 3: Переходим к делу
+
+Нарративная структура для чайников: Часть 4. Готовые инструменты
 ---
 
 Пока статьи не перенесены на этот сайт вы можете просмотреть их на архивном сайте Киборгов и Чародеев:
