--- a/src/content/posts/translations/alexandrian-game-structures-7.mdx
+++ b/src/content/posts/translations/alexandrian-game-structures-7.mdx
@@ -1,5 +1,6 @@
 ---
 title: "#Теория — Структура игры, ч.7: Играемcя с Hexcrawl"
+description: "Перевод цикла статей Александриана про игровые структуры #alexandrian #translate #rpg"
 date: 2023-09-18
 tags:
   - Alexandrian
