--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -19,7 +19,11 @@ author: Angry GM
 
 ТЕМП в НРИ (Pacing) от Злюки ГМа
 
-Сила редактуры
+[Сила редактуры](https://cyborgsandmages.com/posts/translations/angrygm-the-power-of-editing)
+
+[Помогите! Мои игроки говорят с вещами, часть 1](https://cyborgsandmages.com/posts/translations/angrygm-help-my-players-are-talking-to-things-1)
+
+[Помогите! Мои игроки говорят с вещами, часть 2](https://cyborgsandmages.com/posts/translations/angrygm-help-my-players-are-talking-to-things-2)
 
 Прыжок за ширму: как провести свою первую игру
 
@@ -27,11 +31,17 @@ author: Angry GM
 
 Потерянные навыки игрока: Коллер
 
+Потерянные навыки игрока: Маппер
+
 Что делает исследование исследованием?
 
 Выиграть ролевую игру
 
 Основная механика Злого ГМ-а
+
+[5 простых правил для игр с системой навыков](https://cyborgsandmages.com/posts/translations/angrygm-five-simple-rules-for-games-with-skill-system)
+
+[Карты: что у вас на столе?](https://cyborgsandmages.com/posts/translations/angrygm-maps-whats-on-your-table)
 
 ## Советы игрокам
 
