--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -8,6 +8,10 @@ tags:
 author: Angry GM
 ---
 
+Это перечень статей Злого ГМ-а, которые были переведены на русский язык различными переводчиками.
+
+
+
 ## Разное
 
 [Таро для мастеров- чайников](https://cyborgsandmages.com/posts/translations/angrygm-taro-for-dummies)
