--- a/src/content/posts/translations/angrygm-the-power-of-editing.mdx
+++ b/src/content/posts/translations/angrygm-the-power-of-editing.mdx
@@ -5,7 +5,7 @@ date: 2023-09-18
 tags:
   - Angry GM
   - перевод
-  - навыки
+  - редактирование
   - Советы Мастеру
 author: Angry GM
 translator: Настольное королевство
