--- a/src/content/posts/articles/big-model.mdx
+++ b/src/content/posts/articles/big-model.mdx
@@ -1,6 +1,6 @@
 ---
 title: Большая модель
-description: Описание Большой модели Рона Эдварда от Александра Ермакова
+description: "Описание Большой модели Рона Эдварда от Александра Ермакова #bigmodel #rpg #theory #edwards"
 date: 2023-09-18 09:00
 tags:
   - теория
