--- a/src/content/singles/resources.mdx
+++ b/src/content/singles/resources.mdx
@@ -7,6 +7,8 @@ description: Проекты и материалы, созданные Кибор
 
 [Создатель чудовищ](https://monstermaker.cyborgsandmages.com/)
 
+[RSS](https://cyborgsandmages.com/rss.xml)
+
 ## Наши архивные ресурсы
 
 [Архив статей с сайта Киборгов и Чародеев на базе Wordpress](https://archivecyborgsandmages.wordpress.com/) - служит лишь для хранения архива статей и переводов
