--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -171,11 +171,9 @@ tags:
 
 ## Цикл Случайный совет для Мастера
 
-Случайный совет для Мастера: Гексы-матрёшки
-
 Случайный совет для Мастера: Создание улик
 
-Случайный совет для Мастера: создание улик (Часть 2)
+Случайный совет для Мастера: Создание улик (Часть 2)
 
 Случайный совет для Мастера: Зачем вообще нужны столкновения в дикой местности?
 
@@ -193,11 +191,7 @@ tags:
 
 Случайный совет для Мастера: Когда зовут Маленьких Парней
 
-Случайный совет для Мастера: пригоршни дайсов
-
-Случайный совет для Мастера: создание улик
-
-Случайный совет для Мастера: создание улик (Часть 2)
+Случайный совет для Мастера: Пригоршни дайсов
 
 Случайный совет для Мастера: Великолепные комнаты подземелий
 
@@ -260,9 +254,9 @@ tags:
 
 ## Цикл Спроси Александриана
 
-[Спроси Александриана #6: Открытие на другой раз](https://cyborgsandmages.com/posts/translations/alexandrian-ask6)
+[Спроси Александриана № 6 - Открытие на другой раз](https://cyborgsandmages.com/posts/translations/alexandrian-ask6)
 
-[Спроси Александриана №9: Продвинутые рулинги для 5е](https://cyborgsandmages.com/posts/translations/alexandrian-ask9)
+[Спроси Александриана № 9 - Продвинутые рулинги для 5е](https://cyborgsandmages.com/posts/translations/alexandrian-ask9)
 
 [Спроси Александриана № 10 - Как попрощаться с игроком](https://cyborgsandmages.com/posts/translations/alexandrian-ask10)
 
@@ -291,17 +285,25 @@ tags:
 
 [Четвертая статья](https://cyborgsandmages.com/posts/translations/alexandrian-preparing-4)
 
-## Список «Нет» для ДМа
+## Список «Нет» для Мастера
 
-[Список «Нет» для ДМа #13: Опасности текста в табличке](https://cyborgsandmages.com/posts/translations/alexandrian-dont-13)
+[Список «Нет» для Мастера № 13: Опасности текста в табличке](https://cyborgsandmages.com/posts/translations/alexandrian-dont-13)
 
-[Список «Нет» для ДМа № 15: Заблуждение водящего по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-dont-15)
+[Список «Нет» для Мастера № 15: Заблуждение водящего по рельсам](https://cyborgsandmages.com/posts/translations/alexandrian-dont-15)
 
 ## Прочее
 
-Cypher v. Fate
-
 Дополнение к исследованию гексов: Специализированные таблицы столкновений
+
+Инструмент для исследования гексов: Таблица слухов
+
+Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
+
+Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
+
+Исследование точек интереса
+
+Исследование по точкам интереса – Часть 2.Процедуры продвинутого характера
 
 Дополнение к исследованию по точкам: Исследование глубин
 Забытые Королевства – Торговый Тракт
@@ -312,35 +314,23 @@ Cypher v. Fate
 
 Игровые группы vs. Те, кто просто собрался поиграть
 
-Инструмент для исследования гексов: Таблица слухов
-
-Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
-
-Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
-
 Исследование глубин – Часть 2: Продвинутые опции
-
-Исследование по точкам интереса – Часть 2.Процедуры продвинутого характера
-
-Исследование точек интереса
 
 Мысль дня: Драконы = Подземелья
 
 Мысль дня: Эволюция нулевой сессии
 
-Нагрузка в камнях для 5E
+Нагрузка в камнях для 5E – Часть 1
 
-Нагрузка в камнях для 5E – Часть 2: Лист
+Нагрузка в камнях для 5E – Часть 2, Лист
 
 Не готовьте сюжетную линию «Вы пожалеете об этом дне, герои!» (Принципы злодейства в НРИ)
 
-Непроверенная пятая редакция: Рационализированные навыки
-
-Остров сокровищ: Карта – это приключение
+Остров сокровищ - Карта – это приключение
 
 Отдых в подземелье
 
-Отдых в подземелье – Часть 2: Трюки с веревками и миниатюрные хижины
+Отдых в подземелье – Часть 2 -  Трюки с веревками и миниатюрные хижины
 
 Продвинутые практики
 
@@ -350,7 +340,7 @@ Cypher v. Fate
 
 Что с подземельем? Упадок D&D приключений
 
-
+Cypher v. Fate
 
 [Как готовить модуль, часть 1](https://cyborgsandmages.com/posts/translations/alexandrian-how-to-prepare-module-1)
 
@@ -404,6 +394,8 @@ Cypher v. Fate
 Рулинги на практике: Проверки рассудка
 
 ## Непроверенная пятая редакция
+
+Непроверенная пятая редакция: Рационализированные навыки
 
 [Непроверенная пятая редакция: Продвинутый отдых](https://cyborgsandmages.com/posts/translations/alexandrian-5e-improved-rest)
 
