--- a/src/content/posts/translations/angrygm-five-simple-rules-for-games-with-skill-system.mdx
+++ b/src/content/posts/translations/angrygm-five-simple-rules-for-games-with-skill-system.mdx
@@ -1,5 +1,5 @@
 ---
-title: 5 простых правил для игр с системой навыков
+title: Злой ГМ - 5 простых правил для игр с системой навыков
 description: Перевод-конспект статьи Злого-ГМа про особенности вождения систем с навыками
 date: 2023-09-18 06:00
 tags:
