--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -29,7 +29,7 @@ author: Angry GM
 
 [Помогите! Мои игроки говорят с вещами, часть 2](https://cyborgsandmages.com/posts/translations/angrygm-help-my-players-are-talking-to-things-2)
 
-Прыжок за ширму: как провести свою первую игру
+[Прыжок за ширму: как провести свою первую игру](https://cyborgsandmages.com/posts/translations/angrygm-jumping-the-screen-how-to-run-your-first-rpg-session)
 
 Выносите решения как мастер
 
