--- a/src/content/posts/translations/always-tell-me-about-chances.mdx
+++ b/src/content/posts/translations/always-tell-me-about-chances.mdx
@@ -1,5 +1,5 @@
 ---
-title: "[Перевод] Всегда говори мне о шансах: переосмысление случайных встреч (часть 1)"
+title: "Злой ГМ - Всегда говори мне о шансах: переосмысление случайных встреч (часть 1)"
 description: Перевод статьи Злого ГМ-а про случайные встречи
 date: "2022-06-11"
 tags: 
