--- a/src/content/posts/translations/angrygm-jumping-the-screen-how-to-run-your-first-rpg-session.mdx
+++ b/src/content/posts/translations/angrygm-jumping-the-screen-how-to-run-your-first-rpg-session.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Прыжок за ширму: как провести свою первую игру"
+title: "Злой ГМ - Прыжок за ширму: как провести свою первую игру"
 description: Перевод-конспект статьи Злого-ГМа
 date: 2023-09-18 10:00
 tags:
