--- a/src/content/posts/translations/angrygm-maps-whats-on-your-table.mdx
+++ b/src/content/posts/translations/angrygm-maps-whats-on-your-table.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Карты: что у вас на столе?"
+title: "Злой ГМ - Карты: что у вас на столе?"
 description: Перевод-конспект статьи Злого-ГМа
 date: 2023-09-18 09:00
 tags:
