--- a/src/content/posts/translations/dndbeyond-material-components-make-game-better.mdx
+++ b/src/content/posts/translations/dndbeyond-material-components-make-game-better.mdx
@@ -10,9 +10,10 @@ author: Riley Silverman
 translator: Konstructor
 ---
 
-Оригинал статьи: //www.dndbeyond.com/posts/1503-spell-components-how-they-work-and-how-to-mak
+[Оригинал статьи](https://www.dndbeyond.com/posts/1503-spell-components-how-they-work-and-how-to-mak)
 
-Перевод: https://rpg-news.ru/2023/06/03/kak-materialnye-komponenty-zaklinanij-mogut-sdelat-igru-luchshe/
+
+[Перевод](https://rpg-news.ru/2023/06/03/kak-materialnye-komponenty-zaklinanij-mogut-sdelat-igru-luchshe/)
 
 Как материальные компоненты для заклинаний участвуют в среднестатической игре в ДнД? Ну обычно кастер покупает мешочек с барахлом или спелл-фокус, и на этом про материальные компоненты все забывают. Даже если для заклинания нужен специальный компонент со стоимостью в золоте, вряд ли его получение или использование во время каста как-то обыгрывается в игре.
 
