--- a/src/content/posts/translations/translate-angry-gm-downtime-activities-rules.mdx
+++ b/src/content/posts/translations/translate-angry-gm-downtime-activities-rules.mdx
@@ -1,5 +1,5 @@
 ---
-title: "[Перевод] Система деятельности во время простоя Злого ГМ-а"
+title: "Злой ГМ - Система деятельности во время простоя"
 description: "Перевод статьи Злого ГМ-а с описанием его системы деятельности простоя"
 date: "2022-06-12"
 tags: 
