--- a/src/content/posts/translations/translate-how-to-play-open-world-angry-gm.mdx
+++ b/src/content/posts/translations/translate-how-to-play-open-world-angry-gm.mdx
@@ -1,12 +1,12 @@
 ---
-title: "[Перевод] Как играть в открытом мире Angry GM"
+title: "Как играть в открытом мире Злого ГМ-а"
 date: "2022-06-10"
-description: Перевод статьи Angry GM
+description: Перевод статьи Angry GM про его концепт Открытого мира - кампании, построенной по принципу песочницы
 tags: 
   - "Angry GM"
   - "campaign"
   - "sandbox"
-  - "Открытый-мир"
+  - "Открытый мир"
   - "Перевод"
 ---
 
