--- a/src/content/posts/translations/angrygm-help-my-players-are-talking-to-things-1.mdx
+++ b/src/content/posts/translations/angrygm-help-my-players-are-talking-to-things-1.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Помогите! Мои игроки говорят с вещами! Часть 1"
+title: "Злой ГМ - Помогите! Мои игроки говорят с вещами! Часть 1"
 description: Перевод-конспект статьи Злого-ГМа
 date: 2023-09-18 07:00
 tags:
