--- a/src/content/posts/translations/angrygm-the-power-of-editing.mdx
+++ b/src/content/posts/translations/angrygm-the-power-of-editing.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Сила редактуры"
+title: "Злой ГМ - Сила редактуры"
 description: Перевод-конспект статьи Злого-ГМа
 date: 2023-09-18 07:30
 tags:
