--- a/src/content/posts/translations/angrygm-lost-player-skills-calling.mdx
+++ b/src/content/posts/translations/angrygm-lost-player-skills-calling.mdx
@@ -5,7 +5,7 @@ date: 2023-09-18 17:30
 tags:
   - Angry GM
   - перевод
-  - редактирование
+  - игрок
   - Советы Мастеру
 author: Angry GM
 translator: Настольное королевство
